--- a/css/style.css
+++ b/css/style.css
@@ -6,6 +6,7 @@
 
 :root {
     --color-lite-grey: #F7F7F9;
+    --color-button: #F4F4F4;
     --color-white: #FFFFFF;
     --color-red: #CD0000;
     --color-green: #73DB43;
@@ -20,4 +21,20 @@ a {
 
 li {
     list-style: none;
+}
+
+
+#map {
+    width: 300px;
+    height: 300px;
+}
+
+body {
+    max-width: 1280px;
+    background-color: var(--color-white);
+    grid-template-columns: 15% 85%;
+}
+
+.aside-left {
+    outline: 1px solid red;
 }
