--- a/css/style.css
+++ b/css/style.css
@@ -76,7 +76,7 @@ p {
 
 .aside-left__logo {
     outline: 1px solid red;
-    margin-bottom: 5.5vh;
+    margin-bottom: 4.8vh;
 
 }
 
@@ -84,9 +84,13 @@ p {
     max-width: 100%;
 }
 
+.navbar {
+    margin-bottom: 36.5vh;
+}
+
 .navbar__list {
-    padding: .7vh 1.7vw;
-    margin-bottom: 40.5vh;
+    padding: .7vh 2vw;
+    margin-bottom: 0vh;
 }
 
 .navbar__list__href {
@@ -97,7 +101,7 @@ p {
 }
 
 .navbar__list__item:not(:last-child) {
-    margin-bottom: 3.9vh;
+    margin-bottom: 3.6vh;
 }
 
 .aside-left__social {
@@ -123,7 +127,7 @@ p {
     outline: 1px solid blue;
     display: grid;
     justify-content: space-between;
-    grid-template-columns: 16.8vw 17vw;
+    grid-template-columns: 16.8vw 21vw;
     padding: 27px 42px;
 }
 
@@ -136,7 +140,7 @@ p {
 .header__descr,
 .sign {
     font-weight: 400;
-    font-size: calc(var(--sizeindex) * .61);
+    font-size: calc(var(--sizeindex) * .69);
     line-height: 17px;
     color: var(--color-black);
 }
@@ -152,7 +156,7 @@ p {
 
 .tel {
     font-weight: 700;
-    font-size: calc(var(--sizeindex));
+    font-size: calc(var(--sizeindex) * 1.05);
     line-height: 27px;
     color: var(--color-red);
 }
@@ -161,14 +165,12 @@ p {
     background-image: url('../img/promo_fon_1280.png');
     background-repeat: no-repeat;
     background-size: cover;
-    padding: 60px 0 155px 0;
+    padding: 63px 15% 151px 15%;
 
 }
 
 .main-promo-wrapper {
-    text-align: center;
-    width: 54vw;
-    margin: 0 auto;
+    padding: 0;
 }
 
 .main-promo__header {
@@ -176,15 +178,19 @@ p {
     font-size: calc(var(--sizeindex) * 1.9);
     line-height: 51px;
     color: var(--color-white);
+    text-align: center;
+    padding: 0;
+    letter-spacing: 2px;
 }
 
 .main-search {
+    position: relative;
     outline: 1px solid red;
     width: 91.5%;
     margin: 0 auto;
     z-index: 1;
-    margin-top: -110px;
-    padding: 27px 20px;
+    margin-top: -104px;
+    padding: 22px 25px;
     background-color: var(--color-white);
 }
 
