--- a/css/style.css
+++ b/css/style.css
@@ -61,6 +61,7 @@ p {
     display: grid;
     margin: 0 auto;
     max-width: 1280px;
+    overflow: hidden;
     background-color: var(--color-white);
     grid-template-columns: 15.6% 84.4%;
     grid-template-areas: "aside-left header "
@@ -76,7 +77,7 @@ p {
 
 .aside-left__logo {
     outline: 1px solid red;
-    margin-bottom: 4.8vh;
+    margin-bottom: 4vh;
 
 }
 
@@ -85,7 +86,7 @@ p {
 }
 
 .navbar {
-    margin-bottom: 36.5vh;
+    margin-bottom: 32.5vh;
 }
 
 .navbar__list {
@@ -101,7 +102,7 @@ p {
 }
 
 .navbar__list__item:not(:last-child) {
-    margin-bottom: 3.6vh;
+    margin-bottom: 3.2vh;
 }
 
 .aside-left__social {
@@ -140,7 +141,7 @@ p {
 .header__descr,
 .sign {
     font-weight: 400;
-    font-size: calc(var(--sizeindex) * .69);
+    font-size: calc(var(--sizeindex) * .64);
     line-height: 17px;
     color: var(--color-black);
 }
@@ -165,7 +166,7 @@ p {
     background-image: url('../img/promo_fon_1280.png');
     background-repeat: no-repeat;
     background-size: cover;
-    padding: 63px 15% 151px 15%;
+    padding: 63px 14.5% 151px 15%;
 
 }
 
@@ -175,7 +176,7 @@ p {
 
 .main-promo__header {
     font-weight: 600;
-    font-size: calc(var(--sizeindex) * 1.9);
+    font-size: calc(var(--sizeindex) * 1.8);
     line-height: 51px;
     color: var(--color-white);
     text-align: center;
@@ -197,7 +198,7 @@ p {
 .main-search__form__top {
     display: flex;
     flex-direction: row;
-    margin-bottom: 4vh;
+    margin-bottom: 4.5vh;
 }
 
 #checkboxOne,
@@ -236,7 +237,7 @@ label {
     font-weight: 500;
     font-size: calc(var(--sizeindex) * .68);
     line-height: 120%;
-    margin-right: 4%;
+    margin-right: 3%;
 }
 
 .main-search__form__center {
@@ -244,7 +245,8 @@ label {
     grid-template-columns: 25% 20% 20% 21.5% 8.5%;
     justify-content: space-between;
     gap: 13px;
-    padding: 17px 0;
+    padding: 8px 0;
+    margin-bottom: 1.5vh;
 }
 
 .main-search__form__center__type,
@@ -329,6 +331,43 @@ label {
 
 .main-search__form__bottom {
     display: grid;
-    grid-template-columns: 20% 20%;
+    grid-template-columns: 25% 21%;
     justify-content: space-between;
+    margin-bottom: 1vh;
 }
+
+.main-search__button {
+    background-color: var(--color-red);
+    color: var(--color-white);
+    border-radius: 4px;
+    border: none;
+    font-size: calc(var(--sizeindex) *0.6);
+}
+
+.main-search__form__bottom__res {
+    font-style: normal;
+font-weight: 500;
+font-size: calc(var(--sizeindex) * 0.63);
+line-height: 16px;
+color: #808080;
+}
+
+.main-search__form__bottom__res__href {
+    font-weight: 500;
+font-size: calc(var(--sizeindex) * 0.63);
+line-height: 16px;
+color: var(--color-red);
+position: relative;
+}
+
+.main-search__form__bottom__button {
+    font-weight: 500;
+font-size: calc(var(--sizeindex) * 0.63);
+line-height: 16px;
+color: var(--color-red);
+border: 1px solid #CACACA;
+padding: 6px 10px;
+border-radius: 4px;
+background-color: var(--color-white);
+}
+
