--- a/css/style.css
+++ b/css/style.css
@@ -61,7 +61,6 @@ p {
     display: grid;
     margin: 0 auto;
     max-width: 1280px;
-    overflow: hidden;
     background-color: var(--color-white);
     grid-template-columns: 15.6% 84.4%;
     grid-template-areas: "aside-left header "
@@ -77,7 +76,7 @@ p {
 
 .aside-left__logo {
     outline: 1px solid red;
-    margin-bottom: 4vh;
+    margin-bottom: 5vh;
 
 }
 
@@ -86,7 +85,7 @@ p {
 }
 
 .navbar {
-    margin-bottom: 32.5vh;
+    margin-bottom: 39vh;
 }
 
 .navbar__list {
@@ -96,13 +95,13 @@ p {
 
 .navbar__list__href {
     font-weight: 600;
-    font-size: calc(var(--sizeindex) * 0.7);
+    font-size: calc(var(--sizeindex) * 0.8);
     line-height: 20px;
     color: var(--color-black);
 }
 
 .navbar__list__item:not(:last-child) {
-    margin-bottom: 3.2vh;
+    margin-bottom: 3.7vh;
 }
 
 .aside-left__social {
@@ -141,7 +140,7 @@ p {
 .header__descr,
 .sign {
     font-weight: 400;
-    font-size: calc(var(--sizeindex) * .64);
+    font-size: calc(var(--sizeindex) * .68);
     line-height: 17px;
     color: var(--color-black);
 }
@@ -157,7 +156,7 @@ p {
 
 .tel {
     font-weight: 700;
-    font-size: calc(var(--sizeindex) * 1.05);
+    font-size: calc(var(--sizeindex) * 1.1);
     line-height: 27px;
     color: var(--color-red);
 }
@@ -166,7 +165,7 @@ p {
     background-image: url('../img/promo_fon_1280.png');
     background-repeat: no-repeat;
     background-size: cover;
-    padding: 63px 14.5% 151px 15%;
+    padding: 63px 13.5% 151px 13.5%;
 
 }
 
@@ -176,7 +175,7 @@ p {
 
 .main-promo__header {
     font-weight: 600;
-    font-size: calc(var(--sizeindex) * 1.8);
+    font-size: calc(var(--sizeindex) * 1.95);
     line-height: 51px;
     color: var(--color-white);
     text-align: center;
@@ -186,13 +185,15 @@ p {
 
 .main-search {
     position: relative;
-    outline: 1px solid red;
+    box-shadow: 0px 9px 34px rgba(58, 68, 83, 0.24);
+    border-radius: 6px;
     width: 92.5%;
     margin: 0 auto;
     z-index: 1;
     margin-top: -104px;
     padding: 22px 27px;
     background-color: var(--color-white);
+    margin-bottom: 35px;
 }
 
 .main-search__form__top {
@@ -237,7 +238,7 @@ label {
     font-weight: 500;
     font-size: calc(var(--sizeindex) * .68);
     line-height: 120%;
-    margin-right: 3%;
+    margin-right: 5.3%;
 }
 
 .main-search__form__center {
@@ -346,28 +347,112 @@ label {
 
 .main-search__form__bottom__res {
     font-style: normal;
-font-weight: 500;
-font-size: calc(var(--sizeindex) * 0.63);
-line-height: 16px;
-color: #808080;
+    font-weight: 500;
+    font-size: calc(var(--sizeindex) * 0.63);
+    line-height: 16px;
+    color: #808080;
 }
 
 .main-search__form__bottom__res__href {
     font-weight: 500;
-font-size: calc(var(--sizeindex) * 0.63);
-line-height: 16px;
-color: var(--color-red);
-position: relative;
+    font-size: calc(var(--sizeindex) * 0.63);
+    line-height: 16px;
+    color: var(--color-red);
+    position: relative;
 }
 
 .main-search__form__bottom__button {
     font-weight: 500;
-font-size: calc(var(--sizeindex) * 0.63);
-line-height: 16px;
-color: var(--color-red);
-border: 1px solid #CACACA;
-padding: 6px 10px;
-border-radius: 4px;
-background-color: var(--color-white);
+    font-size: calc(var(--sizeindex) * 0.63);
+    line-height: 16px;
+    color: var(--color-red);
+    border: 1px solid #CACACA;
+    padding: 6px 10px;
+    border-radius: 4px;
+    background-color: var(--color-white);
+}
+
+.main-popularCars {
+    padding: 0 3vw;
+
+}
+
+.main-popularCars__header {
+    font-weight: 700;
+    font-size: calc(var(--sizeindex) * 1.1);
+    line-height: 29px;
+    margin-bottom: 1.55vh;
+}
+
+.main-popularCars__var {
+    padding: 0 2vw;
+}
+
+.main-popularCars__var input[type='radio'] {
+    display: none;
+    margin-right: 20px;
+}
+
+.main-popularCars__var label {
+    position: relative;
+}
+
+.main-popularCars__var label::before {
+    content: "";
+    display: inline-block;
+    width: 17px;
+    height: 18px;
+    position: absolute;
+    left: -25px;
+    bottom: 0;
+    background-image: url('../img/radio1.png');
+}
+
+.main-popularCars__var__var1 {
+    display: block;
+}
+
+.main-popularCars__avto {
+    border: 1px solid #E2E2E2;
+    border-radius: 4px;
+}
+
+.avto1,
+.avto2,
+.avto3 {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+    padding: 16px;
+}
+
+
+.main-popularCars__avto__desr__name {
+    font-weight: 800;
+    font-size: calc(var(--sizeindex) * 1.05);
+    line-height: 27px;
+}
+
+.main-popularCars__avto__desr__V,
+.main-popularCars__avto__desr__year,
+.main-popularCars__avto__desr__mileage,
+.main-popularCars__avto__add__actuator,
+.main-popularCars__avto__add__kpp,
+.main-popularCars__avto__price__city {
+    font-weight: 500;
+    font-size: calc(var(--sizeindex) * .7);
+    line-height: 17px;
+    color: #8B8B8B;
+}
+
+.main-popularCars__avto__desr__V span,
+.main-popularCars__avto__desr__year span,
+.main-popularCars__avto__desr__mileage span,
+.main-popularCars__avto__add__actuator span,
+.main-popularCars__avto__add__kpp span,
+.main-popularCars__avto__price__city span {
+    font-weight: 500;
+    font-size: calc(var(--sizeindex) * .7);
+line-height: 17px;
+color: #000000;
 }
 
