--- a/css/style.css
+++ b/css/style.css
@@ -72,6 +72,7 @@ p {
 
 .aside-left {
     padding: 28px 0px 0px 0px;
+    background-color: #F7F7F9;
 }
 
 .aside-left__logo {
@@ -452,7 +453,132 @@ label {
 .main-popularCars__avto__price__city span {
     font-weight: 500;
     font-size: calc(var(--sizeindex) * .7);
-line-height: 17px;
-color: #000000;
+    line-height: 17px;
+    color: #000000;
 }
 
+.main-popularCars__avto__price__rub {
+    font-weight: 700;
+    font-size: calc(var(--sizeindex) * .95);
+    line-height: 24px;
+    color: var(--color-black);
+}
+
+.main-popularCars__avto__price__button {
+    font-weight: 500;
+    font-size: calc(var(--sizeindex) * .6);
+    line-height: 16px;
+    color: var(--color-white);
+    border-radius: 35px;
+    border-color: transparent;
+    padding: 4px 10px;
+}
+
+.avto1 .main-popularCars__avto__price__button,
+.avto3 .main-popularCars__avto__price__button {
+    background-color: var(--color-green);
+}
+
+.avto2 .main-popularCars__avto__price__button {
+    background-color: var(--color-orange);
+}
+
+.main-popularCars__showAdd {
+    width: 100%;
+    align-items: center;
+    padding: 13px 0;
+    font-size: calc(var(--sizeindex) * .6);
+    line-height: 16px;
+    color: #2C2C2C;
+    background-color: #F4F4F4;
+    border-radius: 4px;
+    border-color: transparent;
+}
+
+.main-advantages {
+    padding: 0 3vw;
+}
+
+.main-advantages__headers {
+    text-align: center;
+}
+
+.main-advantages-wrapper {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+    gap: 50px;
+}
+
+.main-advantages__cards__descr {
+    font-weight: 500;
+font-size: calc(var(--sizeindex) * .6);
+line-height: 15px;
+color: #8B8B8B;
+}
+
+.main-feedback {
+    padding: 0 3vw;
+}
+
+.main-feedback__header {
+    text-align: center;
+}
+
+.main-feedback__articles {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+    gap: 50px;
+}
+
+.main-feedback__article__video {
+    width: 100%;
+}
+
+.main-feedback__button {
+    width: 100%;
+    align-items: center;
+    padding: 13px 0;
+    font-size: calc(var(--sizeindex) * .6);
+    line-height: 16px;
+    color: #2C2C2C;
+    background-color: #F4F4F4;
+    border-radius: 4px;
+    border-color: transparent;
+}
+
+.main-purchase-wrapper {
+    display: grid;
+    grid-template-columns: 1fr 2fr;
+}
+
+.main-purchase {
+    padding: 0 3vw;
+}
+
+.main-purchase__left {
+    background-image: url('../img/purchase_1280_big.png');
+}
+
+.main-purchase__right__articles {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    gap: 56px;
+}
+
+.main-purchase__right__articles__article__header {
+    font-weight: 700;
+font-size: calc(var(--sizeindex) * .8);
+line-height: 20px;
+color: var(--color-black);
+}
+
+.main-purchase__right__articles__article__descr {
+    font-weight: 500;
+    font-size: calc(var(--sizeindex) * .55);
+line-height: 15px;
+color: #8B8B8B;
+}
+
+.main-purchase__right__articles__article:last-child {
+    padding: 40% 40%;
+}
