--- a/css/style.css
+++ b/css/style.css
@@ -622,25 +622,25 @@ label {
 .main-contacts__tel__article__descr {
     font-weight: 500;
     font-size: calc(var(--sizeindex) * .68);
-line-height: 190%;
-color: #8B8B8B;
-display: inline;
+    line-height: 190%;
+    color: #8B8B8B;
+    display: inline;
 }
 
 
 .whatsup {
-font-weight: 500;
-font-size: calc(var(--sizeindex) * .68);
-line-height: 190%;
-color: #8B8B8B;
+    font-weight: 500;
+    font-size: calc(var(--sizeindex) * .68);
+    line-height: 190%;
+    color: #8B8B8B;
 }
 
 .mail {
-font-weight: 500;
-font-size: calc(var(--sizeindex) * .66);
-line-height: 170%;
-color: var(--color-red);
-vertical-align: middle;
+    font-weight: 500;
+    font-size: calc(var(--sizeindex) * .66);
+    line-height: 170%;
+    color: var(--color-red);
+    vertical-align: middle;
 }
 
 #map {
@@ -677,24 +677,91 @@ vertical-align: middle;
 
 
 .main-contacts__map {
-position: relative;
+    position: relative;
 }
 
 .main-contacts__feedback {
     width: 37%;
-    outline: 1px solid red;
     z-index: 20;
-    margin-top: -300px;
+    margin-top: -350px;
     position: absolute;
     margin-left: 45px;
     padding: 24px;
+    background-color: var(--color-white);
+    border-radius: 6px;
 }
 
 .main-contacts__feedback__header {
     width: 100%;
+    margin-bottom: 24px;
 }
 
 .main-contacts__feedback__form {
     display: grid;
     gap: 15px;
+}
+
+.main-contacts__feedback__form-wrapper label {
+    font-weight: 400;
+    font-size: calc(var(--sizeindex) * .6);
+    line-height: 32px;
+    display: block;
+}
+
+.main-contacts__feedback__form__name,
+.main-contacts__feedback__form__tel {
+    height: 40px;
+    background-color: #F1F1F1;
+    width: 100%;
+    border: transparent;
+    border-radius: 6px;
+    font-size: calc(var(--sizeindex) * .6);
+    padding-left: 10px;
+}
+
+.main-contacts__feedback__form-wrapper:last-child {
+    margin-bottom: 24px;
+}
+
+.main-contacts__feedback__form__button {
+    background-color: var(--color-red);
+    width: 100%;
+    align-items: center;
+    padding: 13px 0;
+    font-size: calc(var(--sizeindex) * .6);
+    line-height: 16px;
+    color: var(--color-white);
+    border-radius: 4px;
+    border-color: transparent;
+}
+
+.main-footer {
+    padding: 0 3vw;
+}
+
+.main-footer__header {
+    font-weight: 700;
+    font-size: calc(var(--sizeindex) * .65);
+    line-height: 170%;
+}
+
+.main-footer__articles {
+    display: grid;
+    grid-template-columns: 1.9fr 1fr 1fr;
+    gap: 150px;
+}
+
+.main-footer__articles__left__text {
+    font-weight: 500;
+    font-size: 12px;
+    line-height: 130%;
+    font-size: calc(var(--sizeindex) * .55);
+    color: #8B8B8B;
+}
+
+.main-footer__articles__center {
+    font-weight: 500;
+    font-size: calc(var(--sizeindex) * .68);
+    line-height: 190%;
+    color: #8B8B8B;
 }
